--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -2,31 +2,33 @@ name: 自动更新节点
 
 on:
   schedule:
-    - cron: '0 * * * *' # 每一小时运行一次 (UTC时间整点)
-  workflow_dispatch: # 保持手动点击运行的功能，方便调试
+    - cron: '0 * * * *' # 每小时运行一次
+  workflow_dispatch: # 允许手动触发
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 检查代码
+      - name: 1. 检查代码
         uses: actions/checkout@v3
 
-      - name: 安装 Python
+      - name: 2. 安装 Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: 安装依赖库
-        run: pip install requests
+      - name: 3. 安装依赖库
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
-      - name: 运行抓取脚本
+      - name: 4. 运行抓取脚本
         run: python main.py
 
-      - name: 提交并推送更新
+      - name: 5. 提交并推送更新
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
           git add my_sub.yaml
-          git commit -m "每小时自动更新节点" || exit 0
+          git commit -m "Auto update nodes: $(date)" || exit 0
           git push
