--- a/.github/workflows/auto_update.yml
+++ b/.github/workflows/auto_update.yml
@@ -2,8 +2,8 @@ name: 自动更新节点
 
 on:
   schedule:
-    - cron: '0 * * * *' # 每小时运行一次
-  workflow_dispatch: # 允许手动触发
+    - cron: '0 * * * *'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -17,18 +17,19 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: 3. 安装依赖库
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
+      - name: 3. 安装依赖
+        run: pip install requests
 
-      - name: 4. 运行抓取脚本
+      - name: 4. 运行脚本
         run: python main.py
 
-      - name: 5. 提交并推送更新
+      - name: 5. 强力提交
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Action"
+          # 在文件末尾追加一个时间戳注释，确保文件内容一定有变化
+          echo "# Last Update: $(date)" >> my_sub.yaml
           git add my_sub.yaml
-          git commit -m "Auto update nodes: $(date)" || exit 0
+          # 使用 || true 防止因为没有变化而报错停止
+          git commit -m "Auto update: $(date)" || echo "No changes to commit"
           git push
