添加自动运行工作流

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,1 +1,26 @@
+name: Update Nodes
 
+on:
+  workflow_dispatch:  # 允许手动运行
+
+jobs:
+  update:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: 1. 下载代码
+      uses: actions/checkout@v3
+    
+    - name: 2. 设置Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+    
+    - name: 3. 安装依赖
+      run: pip install requests
+    
+    - name: 4. 运行脚本
+      run: python main.py
+    
+    - name: 5. 显示结果
+      run: cat nodes.txt
